# flowsurface

./: .codespellrc  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude/skills/: monitor-odb-alignment.md
.github/workflows/: release.yaml
.mise/tasks/: dev.toml  infra.toml  release.toml
assets/: icon.icns
assets/fonts/: config.json  fontello.json
data/: CLAUDE.md  Cargo.toml
data/src/: aggr.rs  audio.rs  chart.rs  charts.rs  config.rs  layout.rs  lib.rs  log.rs  pane.rs  panel.rs  session.rs  stream.rs  telemetry.rs  theme.rs  tickers_table.rs  util.rs
data/src/aggr/: ticks.rs  time.rs
data/src/chart/: comparison.rs  heatmap.rs  indicator.rs  indicators.rs  kline.rs  ladder.rs  orderbook.rs  style.rs  timeandsales.rs
data/src/chart/indicator/: config.rs  core.rs  mod.rs
data/src/config/: proxy.rs  state.rs  theme.rs  timezone.rs
data/src/layout/: dashboard.rs  pane.rs
data/src/panel/: ladder.rs  timeandsales.rs  tpo.rs
docs/indicators/: bar-range-selection.md  selection-intensity-metrics.md  trade-intensity-heatmap.md
exchange/: CLAUDE.md  Cargo.toml
exchange/proptest-regressions/adapter/: clickhouse.txt
exchange/src/: adapter.rs  client.rs  connect.rs  depth.rs  error.rs  fetcher.rs  lib.rs  limiter.rs  proxy.rs  serde_util.rs  telegram.rs  unit.rs  util.rs
exchange/src/adapter/: binance.rs  bybit.rs  clickhouse.rs  client.rs  connect.rs  http.rs  hub.rs  hyperliquid.rs  limiter.rs  mexc.rs  okex.rs  proxy.rs  ws.rs
exchange/src/adapter/hub/: binance.rs  bybit.rs  hyperliquid.rs  mexc.rs  okex.rs  ws_control.rs
exchange/src/adapter/hub/binance/: fetch.rs  stream.rs
exchange/src/adapter/hub/bybit/: fetch.rs  stream.rs
exchange/src/adapter/hub/hyperliquid/: fetch.rs  stream.rs
exchange/src/adapter/hub/mexc/: fetch.rs  stream.rs
exchange/src/adapter/hub/okex/: fetch.rs  stream.rs
exchange/src/adapter/snapshots/: flowsurface_exchange__adapter__clickhouse__snapshot_tests__catchup_response_deserialization.snap
exchange/src/unit/: price.rs  qty.rs  time.rs
exchange/src/util/: qty.rs
exchange/tests/: gap_fill_integration.rs
exchanges/: Cargo.toml
exchanges/src/: adapter.rs  binance.rs  bybit.rs  depth.rs  fetcher.rs  lib.rs
exchanges/src/adapter/: binance.rs  bybit.rs
scripts/: build-windows.sh  package-dmg.sh
scripts/telemetry/: analyze_reconciliation.py  detect_micro_loss.py  gap_fill_validation.sh  oracle_intensity.sh  validate_bars.py
src/: aggr.rs  audio.rs  chart.rs  charts.rs  connector.rs  data_providers.rs  fetcher.rs  layout.rs  logger.rs  main.rs  resolved_stream.rs  screen.rs  style.rs  theme.rs  tickers_table.rs  widget.rs  widget_window.rs  window.rs
src/aggr/: ticks.rs  time.rs
src/chart/: candlestick.rs  comparison.rs  composition.rs  config.rs  footprint.rs  heatmap.rs  indicator.rs  keyboard_nav.rs  kline.rs  kline_v2.rs  scale.rs  session.rs  study.rs  timeandsales.rs
src/chart/indicator/: kline.rs  open_interest.rs  plot.rs  volume.rs
src/chart/indicator/kline/: bar_analysis.rs  cumulative_delta.rs  delta.rs  ofi.rs  ofi_cumulative_ema.rs  open_interest.rs  trade_count.rs  trade_intensity.rs  trade_intensity_heatmap.rs  volume.rs  zigzag.rs
src/chart/indicator/plot/: bar.rs  bar_with_ema_overlay.rs  line.rs
src/chart/kline/: bar_selection.rs  crosshair.rs  mod.rs  odb_core.rs  rendering.rs
src/chart/kline_v2/: drawing.rs  indicator.rs  panel_runtime.rs
src/chart/kline_v2/indicator/: bollinger.rs  cumulative_volume_delta.rs  cvd.rs  open_interest.rs  rsi.rs  volume.rs
src/chart/scale/: linear.rs  timeseries.rs
src/charts/: candlestick.rs  config.rs  footprint.rs  heatmap.rs  indicators.rs  scales.rs  ticks.rs  timeandsales.rs
src/charts/indicators/: open_interest.rs  volume.rs
src/charts/scales/: linear.rs  timeseries.rs
src/connector/: fetcher.rs  stream.rs
src/data_providers/: aggr.rs  binance.rs  bybit.rs  fetcher.rs
src/data_providers/aggr/: ticks.rs  time.rs
src/fonts/: config.json
src/modal/: audio.rs  layout_manager.rs  network_manager.rs  pane.rs  theme_editor.rs
src/modal/pane/: indicators.rs  mini_tickers_list.rs  settings.rs  settings_control.rs  stream.rs
src/modal/pane/indicators/: editors.rs  lists.rs  mod.rs
src/screen/: dashboard.rs
src/screen/dashboard/: pane.rs  panel.rs  sidebar.rs  theme_editor.rs  tickers_table.rs
src/screen/dashboard/panel/: ladder.rs  orderbook.rs  timeandsales.rs  tpo.rs
src/widget/: chart.rs  color_picker.rs  column_drag.rs  decorate.rs  hsplit.rs  multi_split.rs  notification.rs  test.rs  toast.rs
src/widget/chart/: comparison.rs  heatmap.rs  kline.rs
src/widget/chart/heatmap/: depth_grid.rs  grid.rs  instance.rs  lod.rs  overlay.rs  raster.rs  scale.rs  scene.rs  ui.rs  view.rs  widget.rs
src/widget/chart/heatmap/scale/: axisx.rs  axisy.rs
src/widget/chart/heatmap/scene/: camera.rs  depth_grid.rs  pipeline.rs  uniform.rs
src/widget/chart/heatmap/scene/pipeline/: circle.rs  rectangle.rs
src/widget/chart/heatmap/shaders/: circle.wgsl  common.wgsl  heatmap_tex.wgsl  rect.wgsl
src/widget/chart/heatmap/ui/: axisx.rs  axisy.rs  overlay.rs
src/widget/chart/kline/: chrome.rs  composition.rs  coord.rs  drawing.rs  helpers.rs  layout.rs  scene.rs
website/: TODO.md  package.json
website/src/components/: BaseLayout.astro  Header.astro  Logo.astro
website/src/pages/: index.astro
website/src/styles/: global.css
