[package]
name = "flowsurface-data"
description = "Data aggregation, indexing, and configuration utilities for Flowsurface"
version.workspace = true
license = "GPL-3.0-or-later"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
iced_core.workspace = true
chrono.workspace = true
regex.workspace = true
palette.workspace = true
enum-map.workspace = true
rustc-hash.workspace = true
url.workspace = true
exchange.workspace = true

dirs-next = "2.0.0"
open = "5.3.5"
log = { version = "0.4.29", default-features = false, features = ["std"] }
thiserror = { version = "2.0.18", default-features = false, features = ["std"] }
keyring-core = { version = "1.0.0", default-features = false }
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", default-features = false, features = ["keychain"] }
[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1.0.0", default-features = false }
[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", default-features = false, features = ["crypto-rust"] }
